--- a/css/all.css
+++ b/css/all.css
@@ -1086,6 +1086,7 @@ input[type="checkbox"]{
 .run-specification-title,
 .run-specification-info .tab-control-list li a:before,
 .top-controls a,
+.welcome-nav-list li a,
 [class*="btn-default"],
 [class*="btn-menu"],
 [class*="btn-more"],
